maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:12: error: ')' expected but integer literal found.
    sol += 1
           ^